Saving OpenAPI Overlay

--- a/_apis/stripe/overlays/shipping-rates-openapi-search.yml
+++ b/_apis/stripe/overlays/shipping-rates-openapi-search.yml
@@ -6,23 +6,27 @@ paths:
     get:
       description: <p>Returns a list of your shipping rates.</p>
       tags:
-        - V1
-        - Shipping_rates
+        - Rates
+        - Shipping
+      summary: Retrieve Shipping Rates
     post:
       description: <p>Creates a new shipping rate object.</p>
       tags:
-        - V1
-        - Shipping_rates
+        - Rates
+        - Shipping
+      summary: Create Shipping Rates
   /v1/shipping_rates/{shipping_rate_token}:
     get:
       description: <p>Returns the shipping rate object with the given ID.</p>
       tags:
-        - V1
-        - Shipping_rates
-        - Shipping_rate_token
+        - Rates
+        - Shipping
+        - Tokens
+      summary: Retrieve Shipping Rates Shipping Rate Token
     post:
       description: <p>Updates an existing shipping rate o
       tags:
-        - V1
-        - Shipping_rates
-        - Shipping_rate_tok
+        - Rates
+        - Shipping
+        - Tokens
+      summary: Create Shipping Rates Shipping Rate Token
