--- a/_apis/stripe/overlays/sources-openapi-search.yml
+++ b/_apis/stripe/overlays/sources-openapi-search.yml
@@ -6,8 +6,8 @@ paths:
     post:
       description: <p>Creates a new source object.</p>
       tags:
-        - V1
         - Sources
+      summary: Create Sources
   /v1/sources/{source}:
     get:
       description: >-
@@ -15,9 +15,8 @@ paths:
         a source creation request and Stripe will return the corresponding
         up-to-date source object information.</p>
       tags:
-        - V1
         - Sources
-        - Source
+      summary: Retrieve Sources Source
     post:
       description: >-
         <p>Updates the specified source by setting the values of the parameters
@@ -29,28 +28,23 @@ paths:
         for selected payment methods. Please refer to our <a
         href="/docs/sources">payment method guides</a> for more detail.</p>
       tags:
-        - V1
         - Sources
-        - Source
+      summary: Create Sources Source
   /v1/sources/{source}/mandate_notifications/{mandate_notification}:
     get:
       description: <p>Retrieves a new Source MandateNotification.</p>
       tags:
-        - V1
+        - Mandate
+        - Notifications
         - Sources
-        - Source
-        - Mandate_notifications
-        - Mandate_notification
+      summary: Retrieve Sources Source Mandate Notifications Mandate Notification
   /v1/sources/{source}/source_transactions:
     get:
       description: <p>List source transactions for a given source.</p>
       tags:
-        - V1
         - Sources
-        - Source
-        - Mandate_notifications
-        - Mandate_notification
-        - Source_transactions
+        - Transactions
+      summary: Retrieve Sources Source Source Transactions
   /v1/sources/{source}/source_transactions/{source_transaction}:
     get:
       description: >-
@@ -59,22 +53,13 @@ paths:
         and Stripe will return the corresponding up-to-date source object
         information.</p>
       tags:
-        - V1
         - Sources
-        - Source
-        - Mandate_notifications
-        - Mandate_notification
-        - Source_transactions
-        - Source_transaction
+        - Transactions
+      summary: Retrieve Sources Source Source Transactions Source Transaction
   /v1/sources/{source}/verify:
     post:
       description: <p>Verify a given s
       tags:
-        - V1
         - Sources
-        - Source
-        - Mandate_notifications
-        - Mandate_notification
-        - Source_transactions
-        - Source_transaction
-        - Veri
+        - Verify
+      summary: Create Sources Source Verify
