--- a/_apis/stripe/overlays/subscription-openapi-search.yml
+++ b/_apis/stripe/overlays/subscription-openapi-search.yml
@@ -8,38 +8,40 @@ paths:
         <p>Returns a list of your subscription items for a given
         subscription.</p>
       tags:
-        - V1
-        - Subscription_items
+        - Items
+        - Subscriptions
+      summary: Retrieve Subscription Items
     post:
       description: >-
         <p>Adds a new item to an existing subscription. No existing items will
         be changed or replaced.</p>
       tags:
-        - V1
-        - Subscription_items
+        - Items
+        - Subscriptions
+      summary: Create Subscription Items
   /v1/subscription_items/{item}:
     delete:
       description: >-
         <p>Deletes an item from the subscription. Removing a subscription item
         from a subscription will not cancel the subscription.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
+        - Items
+        - Subscriptions
+      summary: Delete Subscription Items Item
     get:
       description: <p>Retrieves the subscription item with the given ID.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
+        - Items
+        - Subscriptions
+      summary: Retrieve Subscription Items Item
     post:
       description: >-
         <p>Updates the plan or quantity of an item on a current
         subscription.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
+        - Items
+        - Subscriptions
+      summary: Create Subscription Items Item
   /v1/subscription_items/{subscription_item}/usage_record_summaries:
     get:
       description: >-
@@ -55,11 +57,12 @@ paths:
         summary information for the subscription item’s ID should be seen as
         unstable until the subscription billing period ends.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
+        - Items
+        - Record
+        - Subscriptions
+        - Summaries
+        - Usage
+      summary: Retrieve Subscription Items Subscription Item Usage Record Summaries
   /v1/subscription_items/{subscription_item}/usage_records:
     post:
       description: >-
@@ -93,35 +96,26 @@ paths:
         href="https://stripe.com/docs/billing/subscriptions/tiers">tiered
         pricing</a> model.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
+        - Items
+        - Records
+        - Subscriptions
+        - Usage
+      summary: Create Subscription Items Subscription Item Usage Records
   /v1/subscription_schedules:
     get:
       description: <p>Retrieves the list of your subscription schedules.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
+        - Schedules
+        - Subscriptions
+      summary: Retrieve Subscription Schedules
     post:
       description: >-
         <p>Creates a new subscription schedule object. Each customer can have up
         to 500 active or scheduled subscriptions.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
+        - Schedules
+        - Subscriptions
+      summary: Create Subscription Schedules
   /v1/subscription_schedules/{schedule}:
     get:
       description: >-
@@ -129,25 +123,15 @@ paths:
         need to supply the unique subscription schedule identifier that was
         returned upon subscription schedule creation.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
-        - Schedule
+        - Schedules
+        - Subscriptions
+      summary: Retrieve Subscription Schedules Schedule
     post:
       description: <p>Updates an existing subscription schedule.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
-        - Schedule
+        - Schedules
+        - Subscriptions
+      summary: Create Subscription Schedules Schedule
   /v1/subscription_schedules/{schedule}/cancel:
     post:
       description: >-
@@ -156,15 +140,10 @@ paths:
         subscription schedule can only be canceled if its status is
         <code>not_started</code> or <code>active</code>.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
-        - Schedule
         - Cancel
+        - Schedules
+        - Subscriptions
+      summary: Create Subscription Schedules Schedule Cancel
   /v1/subscription_schedules/{schedule}/release:
     post:
       description: >-
@@ -176,16 +155,10 @@ paths:
         remove its <code>subscription</code> property and set the subscription’s
         ID to the <code>released_subscription</code> property.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
-        - Schedule
-        - Cancel
-        - Release
+        - Releases
+        - Schedules
+        - Subscriptions
+      summary: Create Subscription Schedules Schedule Release
   /v1/subscriptions:
     get:
       description: >-
@@ -193,17 +166,8 @@ paths:
         canceled. In order to list canceled subscriptions, specify
         <code>status=canceled</code>.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
-        - Schedule
-        - Cancel
-        - Release
         - Subscriptions
+      summary: Retrieve Subscriptions
     post:
       description: >-
         <p>Creates a new subscription on an existing customer. Each customer can
@@ -226,17 +190,8 @@ paths:
         Schedules provide the flexibility to model more complex billing
         configurations that change over time.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
-        - Schedule
-        - Cancel
-        - Release
         - Subscriptions
+      summary: Create Subscriptions
   /v1/subscriptions/search:
     get:
       description: >-
@@ -252,18 +207,9 @@ paths:
         to an hour behind during outages. Search functionality is not available
         to merchants in India.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
-        - Schedule
-        - Cancel
-        - Release
-        - Subscriptions
         - Search
+        - Subscriptions
+      summary: Retrieve Subscriptions Search
   /v1/subscriptions/{subscription_exposed_id}:
     delete:
       description: >-
@@ -288,35 +234,15 @@ paths:
         proceed. Or, you could check for unpaid invoices before allowing the
         customer to cancel the subscription at all.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
-        - Schedule
-        - Cancel
-        - Release
+        - Exposed
         - Subscriptions
-        - Search
-        - Subscription_exposed_id
+      summary: Delete Subscriptions Subscription Exposed Id
     get:
       description: <p>Retrieves the subscription with the given ID.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
-        - Schedule
-        - Cancel
-        - Release
+        - Exposed
         - Subscriptions
-        - Search
-        - Subscription_exposed_id
+      summary: Retrieve Subscriptions Subscription Exposed Id
     post:
       description: >-
         <p>Updates an existing subscription to match the specified parameters.
@@ -386,37 +312,17 @@ paths:
         href="/docs/billing/subscriptions/usage-based">usage-based billing</a>
         instead.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
-        - Schedule
-        - Cancel
-        - Release
+        - Exposed
         - Subscriptions
-        - Search
-        - Subscription_exposed_id
+      summary: Create Subscriptions Subscription Exposed Id
   /v1/subscriptions/{subscription_exposed_id}/discount:
     delete:
       description: <p>Removes the currently applied discount on a subscription.</p>
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
-        - Schedule
-        - Cancel
-        - Release
-        - Subscriptions
-        - Search
-        - Subscription_exposed_id
         - Discount
+        - Exposed
+        - Subscriptions
+      summary: Delete Subscriptions Subscription Exposed Id Discount
   /v1/subscriptions/{subscription}/resume:
     post:
       description: >-
@@ -428,19 +334,6 @@ paths:
         be <code>past_due</code>. The resumption invoice will void automatically
         if not paid by the expiration
       tags:
-        - V1
-        - Subscription_items
-        - Item
-        - Subscription_item
-        - Usage_record_summaries
-        - Usage_records
-        - Subscription_schedules
-        - Schedule
-        - Cancel
-        - Release
+        - Resume
         - Subscriptions
-        - Search
-        - Subscription_exposed_id
-        - Discount
-        - Subscription
-        - Resu
+      summary: Create Subscriptions Subscription Resume
