--- a/_apis/stripe/overlays/terminal-openapi-search.yml
+++ b/_apis/stripe/overlays/terminal-openapi-search.yml
@@ -6,37 +6,34 @@ paths:
     get:
       description: <p>Returns a list of <code>Configuration</code> objects.</p>
       tags:
-        - V1
-        - Terminal
         - Configurations
+        - Terminal
+      summary: Retrieve Terminal Configurations
     post:
       description: <p>Creates a new <code>Configuration</code> object.</p>
       tags:
-        - V1
-        - Terminal
         - Configurations
+        - Terminal
+      summary: Create Terminal Configurations
   /v1/terminal/configurations/{configuration}:
     delete:
       description: <p>Deletes a <code>Configuration</code> object.</p>
       tags:
-        - V1
-        - Terminal
         - Configurations
-        - Configuration
+        - Terminal
+      summary: Delete Terminal Configurations Configuration
     get:
       description: <p>Retrieves a <code>Configuration</code> object.</p>
       tags:
-        - V1
-        - Terminal
         - Configurations
-        - Configuration
+        - Terminal
+      summary: Retrieve Terminal Configurations Configuration
     post:
       description: <p>Updates a new <code>Configuration</code> object.</p>
       tags:
-        - V1
-        - Terminal
         - Configurations
-        - Configuration
+        - Terminal
+      summary: Create Terminal Configurations Configuration
   /v1/terminal/connection_tokens:
     post:
       description: >-
@@ -45,21 +42,17 @@ paths:
         On your backend, add an endpoint that creates and returns a connection
         token.</p>
       tags:
-        - V1
+        - Connections
         - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
+        - Tokens
+      summary: Create Terminal Connection Tokens
   /v1/terminal/locations:
     get:
       description: <p>Returns a list of <code>Location</code> objects.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
         - Locations
+        - Terminal
+      summary: Retrieve Terminal Locations
     post:
       description: >-
         <p>Creates a new <code>Location</code> object.
@@ -68,186 +61,110 @@ paths:
         country, see the <a href="/docs/terminal/fleet/locations">Manage
         locations</a> guide.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
         - Locations
+        - Terminal
+      summary: Create Terminal Locations
   /v1/terminal/locations/{location}:
     delete:
       description: <p>Deletes a <code>Location</code> object.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
         - Locations
-        - Location
+        - Terminal
+      summary: Delete Terminal Locations Location
     get:
       description: <p>Retrieves a <code>Location</code> object.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
         - Locations
-        - Location
+        - Terminal
+      summary: Retrieve Terminal Locations Location
     post:
       description: >-
         <p>Updates a <code>Location</code> object by setting the values of the
         parameters passed. Any parameters not provided will be left
         unchanged.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
         - Locations
-        - Location
+        - Terminal
+      summary: Create Terminal Locations Location
   /v1/terminal/readers:
     get:
       description: <p>Returns a list of <code>Reader</code> objects.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
-        - Locations
-        - Location
         - Readers
+        - Terminal
+      summary: Retrieve Terminal Readers
     post:
       description: <p>Creates a new <code>Reader</code> object.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
-        - Locations
-        - Location
         - Readers
+        - Terminal
+      summary: Create Terminal Readers
   /v1/terminal/readers/{reader}:
     delete:
       description: <p>Deletes a <code>Reader</code> object.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
-        - Locations
-        - Location
         - Readers
-        - Reader
+        - Terminal
+      summary: Delete Terminal Readers Reader
     get:
       description: <p>Retrieves a <code>Reader</code> object.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
-        - Locations
-        - Location
         - Readers
-        - Reader
+        - Terminal
+      summary: Retrieve Terminal Readers Reader
     post:
       description: >-
         <p>Updates a <code>Reader</code> object by setting the values of the
         parameters passed. Any parameters not provided will be left
         unchanged.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
-        - Locations
-        - Location
         - Readers
-        - Reader
+        - Terminal
+      summary: Create Terminal Readers Reader
   /v1/terminal/readers/{reader}/cancel_action:
     post:
       description: <p>Cancels the current reader action.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
-        - Locations
-        - Location
+        - Actions
+        - Cancel
         - Readers
-        - Reader
-        - Cancel_action
+        - Terminal
+      summary: Create Terminal Readers Reader Cancel Action
   /v1/terminal/readers/{reader}/process_payment_intent:
     post:
       description: <p>Initiates a payment flow on a Reader.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
-        - Locations
-        - Location
+        - Intent
+        - Payments
+        - Process
         - Readers
-        - Reader
-        - Cancel_action
-        - Process_payment_intent
+        - Terminal
+      summary: Create Terminal Readers Reader Process Payment Intent
   /v1/terminal/readers/{reader}/process_setup_intent:
     post:
       description: <p>Initiates a setup intent flow on a Reader.</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
-        - Locations
-        - Location
+        - Intent
+        - Process
         - Readers
-        - Reader
-        - Cancel_action
-        - Process_payment_intent
-        - Process_setup_intent
+        - Setup
+        - Terminal
+      summary: Create Terminal Readers Reader Process Setup Intent
   /v1/terminal/readers/{reader}/refund_payment:
     post:
       description: <p>Initiates a refund on a Reader</p>
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
-        - Locations
-        - Location
+        - Payments
         - Readers
-        - Reader
-        - Cancel_action
-        - Process_payment_intent
-        - Process_setup_intent
-        - Refund_payment
+        - Refunds
+        - Terminal
+      summary: Create Terminal Readers Reader Refund Payment
   /v1/terminal/readers/{reader}/set_reader_display:
     post:
       description: <p>Sets reader display to show cart de
       tags:
-        - V1
-        - Terminal
-        - Configurations
-        - Configuration
-        - Connection_tokens
-        - Locations
-        - Location
+        - Display
         - Readers
-        - Reader
-        - Cancel_action
-        - Process_payment_intent
-        - Process_setup_intent
-        - Refund_payment
-        - Set_reader_displ
+        - Sets
+        - Terminal
+      summary: Create Terminal Readers Reader Set Reader Display
