--- a/_apis/stripe/overlays/topups-openapi-search.yml
+++ b/_apis/stripe/overlays/topups-openapi-search.yml
@@ -6,13 +6,13 @@ paths:
     get:
       description: <p>Returns a list of top-ups.</p>
       tags:
-        - V1
         - Topups
+      summary: Retrieve Topups
     post:
       description: <p>Top up the balance of an account</p>
       tags:
-        - V1
         - Topups
+      summary: Create Topups
   /v1/topups/{topup}:
     get:
       description: >-
@@ -21,22 +21,19 @@ paths:
         request, and Stripe will return the corresponding top-up
         information.</p>
       tags:
-        - V1
         - Topups
-        - Topup
+      summary: Retrieve Topups Topup
     post:
       description: >-
         <p>Updates the metadata of a top-up. Other top-up details are not
         editable by design.</p>
       tags:
-        - V1
         - Topups
-        - Topup
+      summary: Create Topups Topup
   /v1/topups/{topup}/cancel:
     post:
       description: <p>Cancels a top-up. Only pending top-ups can be can
       tags:
-        - V1
+        - Cancel
         - Topups
-        - Topup
-        - Canc
+      summary: Create Topups Topup Cancel
