--- a/_apis/adyen/overlays/apis-io-search.yml
+++ b/_apis/adyen/overlays/apis-io-search.yml
@@ -32,7 +32,29 @@ apis:
       bank accounts, shareholders, and verification-related documents. The
       management operations include actions such as creation, retrieval,
       updating, and deletion of them.
-    tags: []
+    tags:
+      - Accounts
+      - Arrangements
+      - Bank
+      - Close
+      - Documents
+      - Forms
+      - Holders
+      - Legal
+      - Methods
+      - Payouts
+      - Processing
+      - Shareholders
+      - Signatories
+      - States
+      - Stores
+      - Suspend
+      - Taxes
+      - Triggers
+      - Unsuspend
+      - Uploaded
+      - Uploads
+      - Verification
     overlays:
       - type: APIs.io Search
         url: overlays/accounts-openapi-search.yml
@@ -55,7 +77,9 @@ apis:
       The Balance Control API lets you transfer funds between merchant accounts
       that belong to the same legal entity and are under the same company
       account.
-    tags: []
+    tags:
+      - Balance
+      - Transfers
     overlays:
       - type: APIs.io Search
         url: overlays/balance-control-openapi-search.yml
@@ -66,7 +90,16 @@ apis:
     description: >-
       The BIN Lookup API provides endpoints for retrieving information, such as
       cost estimates, and 3D Secure supported version based on a given BIN.
-    tags: []
+    tags:
+      - Availability
+      - Available
+      - Checks
+      - Cost
+      - Estimates
+      - Fees
+      - If
+      - Is
+      - Secure
     overlays:
       - type: APIs.io Search
         url: overlays/binlookup-openapi-search.yml
@@ -74,20 +107,101 @@ apis:
         url: overlays/binlookup-openapi-api-evangelist-ratings.yml
     aid: adyen:adyen-binlookup-api
   - name: Adyen Checkout API
-    description: This is the description of your API.
-    tags: []
+    description: >-
+      Adyen Checkout API provides a simple and flexible way to initiate and
+      authorise online payments. You can use the same integration for payments
+      made with cards (including 3D Secure), mobile wallets, and local payment
+      methods (for example, iDEAL and Sofort).
+    tags:
+      - Amount
+      - Apple
+      - Authorised
+      - Available
+      - Balance
+      - Brands
+      - Cancel
+      - Cancels
+      - Capture
+      - Captured
+      - Captures
+      - Cards
+      - Details
+      - Domains
+      - Donations
+      - Gifts
+      - Keys
+      - Link
+      - Links
+      - Methods
+      - 'On'
+      - Orders
+      - Origin
+      - Pay
+      - Payments
+      - Psp
+      - References
+      - Refunds
+      - Results
+      - Reversals
+      - Sessions
+      - Status
+      - Stored
+      - Submit
+      - The
+      - Tokens
+      - Transactions
+      - Values
+      - Verify
     overlays:
       - type: APIs.io Search
         url: overlays/checkout-openapi-search.yml
       - type: API Evangelist Ratings
         url: overlays/checkout-openapi-api-evangelist-ratings.yml
     aid: adyen:adyen-checkout-api
+    humanURL: https://docs.adyen.com/api-explorer/Checkout/latest/overview
   - name: Adyen Configuration API
     description: >-
       The Configuration API enables you to create a platform where you can
       onboard your users as account holders and create balance accounts, cards,
       and business accounts.
-    tags: []
+    tags:
+      - Accounts
+      - Available
+      - Balance
+      - Bank
+      - Calculate
+      - Card Orders
+      - Cards
+      - Change
+      - Forms
+      - Grants
+      - Groups
+      - Holders
+      - Identification
+      - Instruments
+      - Items
+      - Keys
+      - Linked
+      - Networks
+      - Offers
+      - Orders
+      - Payments
+      - Pin
+      - Pins
+      - Platforms
+      - Public
+      - Reveal
+      - Routes
+      - Rules
+      - Sweep
+      - Sweeps
+      - Taxes
+      - The
+      - Tokens
+      - Transactions
+      - Transfers
+      - Under
+      - Validate
     overlays:
       - type: APIs.io Search
         url: overlays/configuration-openapi-search.yml
@@ -116,7 +230,10 @@ apis:
       Use our API to submit a request to delete shopper''s data, including
       payment details and other related information (for example, delivery
       address or shopper email).
-    tags: []
+    tags:
+      - Erasure
+      - Subjects
+      - Submit
     overlays:
       - type: APIs.io Search
         url: overlays/data-protection-openapi-search.yml
@@ -129,7 +246,15 @@ apis:
       that you can respond to disputes and chargebacks as soon as they are
       initiated. The Disputes API lets you retrieve defense reasons, supply and
       delete defense documents, and accept or defend disputes.
-    tags: []
+    tags:
+      - Accept
+      - Applicable
+      - Defend
+      - Defense
+      - Disputes
+      - Documents
+      - Reasons
+      - Supply
     overlays:
       - type: APIs.io Search
         url: overlays/disputes-openapi-search.yml
@@ -142,7 +267,32 @@ apis:
       your platform. These management operations include, for example, the
       transfer of funds from one account to another, the payout of funds to an
       account holder, and the retrieval of balances in an account.
-    tags: []
+    tags:
+      - Accounts
+      - Balance
+      - Balances
+      - Benefactor's
+      - Beneficiary
+      - Between
+      - Current
+      - Debit
+      - Designate
+      - Direct
+      - Funds
+      - Holders
+      - Most
+      - Out
+      - Paid
+      - Pay
+      - Payouts
+      - Platforms
+      - Recent
+      - Refunds
+      - Send
+      - Since
+      - The
+      - Transactions
+      - Transfers
     overlays:
       - type: APIs.io Search
         url: overlays/funds-openapi-search.yml
@@ -155,7 +305,15 @@ apis:
       your platform. These management operations include, for example, the
       transfer of funds from one account to another, the payout of funds to an
       account holder, and the retrieval of balances in an account.
-    tags: []
+    tags:
+      - Adyen-hosted
+      - Compliance
+      - Link
+      - Onboarding
+      - PCI
+      - Page
+      - Questionnaires
+      - URL
     overlays:
       - type: APIs.io Search
         url: overlays/hosted-onboarding-openapi-search.yml
@@ -166,7 +324,45 @@ apis:
     description: >-
       The Legal Entity Management API enables you to manage legal entities that
       contain information required for verification.
-    tags: []
+    tags:
+      - Accept
+      - Acceptance
+      - Adyen-hosted
+      - Business
+      - Checks
+      - Confirm
+      - Data
+      - Details
+      - Documents
+      - Entities
+      - Errors
+      - Generate
+      - Hosted
+      - Information
+      - Instruments
+      - Legal
+      - Line
+      - Lines
+      - Link
+      - Links
+      - Onboarding
+      - PCI
+      - Page
+      - Pciid
+      - Questionnaires
+      - Reviews
+      - Services
+      - Sign
+      - Status
+      - Templates
+      - Terms
+      - Terms Of Service Documents
+      - Theme
+      - Themes
+      - Transfers
+      - Under
+      - Uploads
+      - Verification
     overlays:
       - type: APIs.io Search
         url: overlays/legal-entity-openapi-search.yml
@@ -177,7 +373,45 @@ apis:
     description: >-
       The Legal Entity Management API enables you to manage legal entities that
       contain information required for verification.
-    tags: []
+    tags:
+      - Accept
+      - Acceptance
+      - Adyen-hosted
+      - Business
+      - Checks
+      - Confirm
+      - Data
+      - Details
+      - Documents
+      - Entities
+      - Errors
+      - Generate
+      - Hosted
+      - Information
+      - Instruments
+      - Legal
+      - Line
+      - Lines
+      - Link
+      - Links
+      - Onboarding
+      - PCI
+      - Page
+      - Pciid
+      - Questionnaires
+      - Reviews
+      - Services
+      - Sign
+      - Status
+      - Templates
+      - Terms
+      - Terms Of Service Documents
+      - Theme
+      - Themes
+      - Transfers
+      - Under
+      - Uploads
+      - Verification
     overlays:
       - type: APIs.io Search
         url: overlays/legal-entity-openapi-search.yml
@@ -188,7 +422,62 @@ apis:
     description: >-
       Configure and manage your Adyen company and merchant accounts, stores, and
       payment terminals.
-    tags: []
+    tags:
+      - Accounts
+      - Actions
+      - Activate
+      - Allowed
+      - Android
+      - Apple
+      - Applications
+      - Billing
+      - Cancel
+      - Certificates
+      - Clients
+      - Companies
+      - Conditions
+      - Configurations
+      - Credentials
+      - Descriptions
+      - Details
+      - Domains
+      - Entities
+      - Generate
+      - HMAC
+      - Keys
+      - Locations
+      - Logic
+      - Logo
+      - Logos
+      - Me
+      - Merchants
+      - Methods
+      - Models
+      - Orders
+      - Origin
+      - Origins
+      - Pay
+      - Payments
+      - Payouts
+      - Products
+      - Reassign
+      - References
+      - Removes
+      - Rules
+      - Sets
+      - Settings
+      - Shipping
+      - Split
+      - Store
+      - Stores
+      - Terminal
+      - Terminals
+      - Tests
+      - The
+      - Up
+      - Uploads
+      - Users
+      - Webhooks
     overlays:
       - type: APIs.io Search
         url: overlays/management-openapi-search.yml
@@ -221,7 +510,12 @@ apis:
       example when a verification check or a payout has been completed.\n\nFor
       more information, refer to our
       [documentation](https://docs.adyen.com/marketplaces-and-platforms/classic/notifications).
-    tags: []
+    tags:
+      - Configurations
+      - Notifications
+      - Subscribe
+      - Subscriptions
+      - Tests
     overlays:
       - type: APIs.io Search
         url: overlays/notification-configurations-openapi-search.yml
@@ -266,7 +560,28 @@ apis:
       payments on the Adyen payments platform. You can use the API to accept
       card payments (including One-Click and 3D Secure), bank transfers,
       ewallets, and many other payment methods.
-    tags: []
+    tags:
+      - Amount
+      - Authentication
+      - Authorised
+      - Authorization
+      - Cancel
+      - Capture
+      - Captured
+      - Change
+      - Complete
+      - Donate
+      - Donations
+      - In-person
+      - Payments
+      - Pending
+      - References
+      - Refunds
+      - Results
+      - The
+      - Using
+      - Your
+      - ~!
     overlays:
       - type: APIs.io Search
         url: overlays/payments-openapi-search.yml
@@ -278,7 +593,19 @@ apis:
       A set of API endpoints that allow you to store payout details, confirm, or
       decline a payout.\n\nFor more information, refer to [Online
       payouts](https://docs.adyen.com/online-payments/online-payouts).
-    tags: []
+    tags:
+      - Cancel
+      - Cards
+      - Confirm
+      - Detail
+      - Details
+      - Instant
+      - Make
+      - Party
+      - Payouts
+      - Store
+      - Submit
+      - Third
     overlays:
       - type: APIs.io Search
         url: overlays/payouts-openapi-search.yml
@@ -291,7 +618,16 @@ apis:
       terminals. You can use the API to obtain information about a specific
       terminal, retrieve overviews of your terminals and stores, and assign
       terminals to a merchant account or store.
-    tags: []
+    tags:
+      - Accounts
+      - Assign
+      - Details
+      - Store
+      - Stores
+      - Terminal
+      - Terminals
+      - The
+      - Under
     overlays:
       - type: APIs.io Search
         url: overlays/pos-terminal-openapi-search.yml
@@ -304,7 +640,24 @@ apis:
       payment details. Tokens should be created with validation during a payment
       request. For more information, refer to our [Tokenization
       documentation](https://docs.adyen.com/online-payments/tokenization).
-    tags: []
+    tags:
+      - Accounts
+      - Ask
+      - Contracts
+      - Details
+      - Disable
+      - Existing
+      - Issuer
+      - Linked
+      - Notify
+      - Payments
+      - Permits
+      - Recurring
+      - Running
+      - Schedules
+      - Shopper
+      - Stored
+      - The
     overlays:
       - type: APIs.io Search
         url: overlays/recurring-openapi-search.yml
@@ -326,7 +679,22 @@ apis:
     aid: adyen:adyen-report-webhooks-api
   - name: Adyen Stored Value API
     description: A set of API endpoints to manage stored value products.
-    tags: []
+    tags:
+      - Balance
+      - Cards
+      - Change
+      - Changes
+      - Checks
+      - Issues
+      - Load
+      - Loads
+      - Merge
+      - Methods
+      - Payments
+      - Status
+      - The
+      - Transactions
+      - Voids
     overlays:
       - type: APIs.io Search
         url: overlays/stored-value-openapi-search.yml
@@ -338,7 +706,37 @@ apis:
       The Adyen Terminal API lets you make payments, issue refunds, collect
       shopper information, and perform other shopper-terminal interactions using
       a payment terminal supplied by Adyen.
-    tags: []
+    tags:
+      - Acquisition
+      - Administrative
+      - Balance
+      - Balance Inquiry
+      - Card Acquisitions
+      - Card Reader Applications
+      - Cards
+      - Diagnosis
+      - Display
+      - Enable
+      - Enable Service
+      - Gettotals
+      - Inputs
+      - Inquiries
+      - Login
+      - Logout
+      - Loyalty
+      - Payments
+      - Print
+      - Readers
+      - Reconciliation
+      - Reversals
+      - Services
+      - Status
+      - Stored
+      - Stored Values
+      - Totals
+      - Transaction Status
+      - Transactions
+      - Value
     overlays:
       - type: APIs.io Search
         url: overlays/terminal-openapi-search.yml
@@ -351,7 +749,13 @@ apis:
       numbers. For more information, refer to [Custom test
       cards](https://docs.adyen.com/development-resources/testing/create-test-cards)
       documentation.
-    tags: []
+    tags:
+      - Cards
+      - Creates
+      - More
+      - One
+      - Ranges
+      - Tests
     overlays:
       - type: APIs.io Search
         url: overlays/test-cards-openapi-search.yml
@@ -397,7 +801,18 @@ apis:
       accounts](https://docs.adyen.com/marketplaces-and-platforms/business-accounts/transactions-api)
       and getting [grants and its outstanding
       balances](https://docs.adyen.com/marketplaces-and-platforms/capital#get-balances).
-    tags: []
+    tags:
+      - Accounts
+      - Capital
+      - Details
+      - Funds
+      - Grants
+      - Grants""
+      - Payouts
+      - References
+      - Returns
+      - Transactions
+      - Transfers
     overlays:
       - type: APIs.io Search
         url: overlays/transfers-openapi-search.yml
