Saving OpenAPI Overlay

--- a/_data/adyen/overlays/apis-io-search.yml
+++ b/_data/adyen/overlays/apis-io-search.yml
@@ -5,8 +5,8 @@ description: >-
   faster.
 url: https://raw.githubusercontent.com/apis-json/artisanal/main/apis/adyen.yml
 created: 2024/04/14
-modified: 2024/04/14
-specificationVersion: '0.16'
+modified: '2024-07-03'
+specificationVersion: '0.18'
 tags: []
 apis:
   - name: Adyen Accounting Notifications API
@@ -837,3 +837,7 @@ maintainers:
     url: http://apievangelist.com
     email: info@apievangelist.com
 aid: adyen
+score: 113
+overlays:
+  - type: API Evangelist Ratings
+    url: /overlays/api-evangelist-ratings.yml
