Saving OpenAPI Overlay

--- a/_data/paypal/overlays/apis-io-search.yml
+++ b/_data/paypal/overlays/apis-io-search.yml
@@ -6,8 +6,8 @@ description: >-
   credit cards to create a global, real-time payment solution.
 url: https://raw.githubusercontent.com/apis-json/artisanal/main/apis/paypal.yml
 created: 2024/04/14
-modified: 2024/04/14
-specificationVersion: '0.16'
+modified: '2024-07-03'
+specificationVersion: '0.18'
 tags: []
 apis:
   - name: Paypal Billing Subscriptions API
@@ -63,3 +63,7 @@ maintainers:
     url: http://apievangelist.com
     email: info@apievangelist.com
 aid: paypal
+score: 25
+overlays:
+  - type: API Evangelist Ratings
+    url: /overlays/api-evangelist-ratings.yml
