--- a/_data/stripe/overlays/apis-io-search.yml
+++ b/_data/stripe/overlays/apis-io-search.yml
@@ -1,4 +1,4 @@
-specificationVersion: '0.17'
+specificationVersion: '0.18'
 aid: stripe
 name: Stripe
 description: >-
@@ -7,7 +7,7 @@ description: >-
   revenue.
 url: https://artisinal.apisjson.org/apis/stripe/apis.yml
 created: 2024/04/14
-modified: 2024/04/14
+modified: '2024-07-03'
 tags: []
 apis:
   - aid: stripe:stripe-accounts-api
@@ -1191,3 +1191,7 @@ common:
     url: https://stripe.com/privacy
   - type: Support
     url: https://support.stripe.com/
+score: 1381
+overlays:
+  - type: API Evangelist Ratings
+    url: /overlays/api-evangelist-ratings.yml
