Saving OpenAPI Overlay

--- a/_data/paypal/overlays/apis-io-search.yml
+++ b/_data/paypal/overlays/apis-io-search.yml
@@ -6,9 +6,10 @@ description: >-
   credit cards to create a global, real-time payment solution.
 url: https://raw.githubusercontent.com/apis-json/artisanal/main/apis/paypal.yml
 created: 2024/04/14
-modified: '2024-07-03'
+modified: '2024-07-04'
 specificationVersion: '0.18'
-tags: []
+tags:
+  - Payments
 apis:
   - name: Paypal Billing Subscriptions API
     description: >-
