--- a/_data/adyen/overlays/apis-io-search.yml
+++ b/_data/adyen/overlays/apis-io-search.yml
@@ -5,9 +5,10 @@ description: >-
   faster.
 url: https://raw.githubusercontent.com/apis-json/artisanal/main/apis/adyen.yml
 created: 2024/04/14
-modified: '2024-07-03'
+modified: '2024-07-04'
 specificationVersion: '0.18'
-tags: []
+tags:
+  - Payments
 apis:
   - name: Adyen Accounting Notifications API
     description: >-
